text changes in about and why us

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,7 +23,9 @@ import heroImg from "../assets/hero-collaboration-cropped.svg";
         <span class="mt-2"> ניהול אנשים מכוון מטרה</span>
       </h1>
       <h2 class="text-xl mb-12 font-bold md:text-2xl">
-        טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ
+        ניהול ההון האנושי שלכם במיקור חוץ
+        <br />
+        ייעוץ וליווי ארגוני
       </h2>
       <Link
         href="/צור-קשר/"
