--- a/src/pages/אודות.astro
+++ b/src/pages/אודות.astro
@@ -24,9 +24,9 @@ const teamEntries = await getCollection("team");
         משימות משאבי האנוש.
       </p>
       <p>
-        השירותים שלנו כוללים תמיכה גיוס בתהליכי, קליטה בארגון או בתפקיד חדש,
-        הפקת משכורות ובנית מערכות שכר ונוכחות, בנית מערך הערכה וקידום לעובדים,
-        ייעוץ במהלכי כוח-אדם אסטרטגיים, בניית תוכניות רווחה ועוד.
+        השירותים שלנו כוללים תמיכה בניהול שוטף, תהליכי גיוס, קליטה בארגון או
+        בתפקיד חדש, הפקת משכורות ובנית מערכות שכר ונוכחות, בנית תכנית הערכה
+        וקידום לעובדים, ייעוץ במהלכי כוח-אדם אסטרטגיים ובניית תוכניות רווחה.
       </p>
     </div>
     {teamEntries.map(entry => <TeamMember member={entry} />)}
