--- a/src/pages/למה-אנחנו.astro
+++ b/src/pages/למה-אנחנו.astro
@@ -33,9 +33,9 @@ import PageLayout from "../layouts/PageLayout.astro";
         למה אתם?
       </h2>
       <p class="text-text-color/60 text-xl">
-        כי אתם רוצים להתמקד בפעילות העיקרית של הארגון שלכם, עם ביטחון מלא שאתם
-        עומדים בכל דרישות החוק ושהעובדים שלכם מטופלים במקצועיות ואנושיות על-ידי
-        צוות מחויב ומסור.
+        כי אתם רוצים להתמקד בפעילות העיקרית של הארגון שלכם, עם ביטחון מלא
+        שהעובדים שלכם מטופלים במקצועיות ואנושיות על-ידי צוות מחויב ומסור, ושאתם
+        עומדים בכל דרישות החוק.
       </p>
     </div>
 
@@ -49,8 +49,7 @@ import PageLayout from "../layouts/PageLayout.astro";
       </h2>
       <p class="text-text-color/60 text-xl">
         אנו מתחייבים לשירות מקצועי ואדיב ולמענה מהיר ומדוייק לצרכי משאבי האנוש
-        שלכם. <br /> במסגרת זו נשמח לספק לכם טווח רחב של שירותים, החל מביצוע פרויקטים
-        ממוקדים בתחום משאבי אנוש וכלה בניהול כולל של מערך משאבי האנוש בארגון.
+        שלכם.
       </p>
     </div>
 
