--- a/src/components/TeamMember.astro
+++ b/src/components/TeamMember.astro
@@ -13,10 +13,11 @@ const { member } = Astro.props;
 const { Content } = await member.render();
 ---
 
-<!-- <section class="mb-24 lg:grid grid-cols-3 content-center gap-8"> -->
-<section class="mb-24 lg:flex items-center gap-8">
+<section class="mb-32 lg:mb-24 lg:flex items-center gap-8">
   <div
-    class="w-72 shrink-0 mx-auto mb-6 rounded-full overflow-hidden aspect-square"
+    class={`${
+      !member.data.image && "max-lg:hidden"
+    } w-72 shrink-0 mx-auto mb-6 rounded-full overflow-hidden aspect-square`}
   >
     {
       member.data.image && (
