add page loading fade in transition

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -23,7 +23,7 @@ const { title, description } = Astro.props;
     class="flex flex-col justify-between text-slate-600 text-lg min-h-screen"
   >
     <Header />
-    <main>
+    <main class="animate-pageLoad">
       <slot />
     </main>
     <Footer />
