add css and tailwind basic settings

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,19 @@
-.scroll {
-  @apply bg-white/95;
+:root {
+  --background: 0 0% 100%;
+  --text: 249 14% 10%;
+  --text-offset: 249 14% 30%;
+  --primary: 209 37% 38%;
+  --secondary: 0 0% 100%;
+  --accent: 181 38% 52%;
+  --accent-light: 181 38% 90%;
+  --tertiary: 6 85% 54%;
+  --tertiary-bg: 6 85% 90%;
+  --input: 0 0% 93%;
+}
+
+body {
+  @apply bg-background text-text;
+  font-feature-settings: "rlig" 1, "calt" 1;
 }
 
 /* hamburger/close icon animation */
