--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 // component imports
-import MainHead from "./MainHead.astro";
+import MainHead from "../components/MainHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
@@ -19,9 +19,7 @@ const { title, description } = Astro.props;
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
   <MainHead title={title} description={description} />
-  <body
-    class="flex flex-col justify-between text-slate-600 text-lg min-h-screen"
-  >
+  <body class="flex flex-col justify-between min-h-screen">
     <Header />
     <main class="animate-pageLoad">
       <slot />
