--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,10 +11,9 @@ import logo from "../assets/logo.png";
 import { navLinks } from "../data";
 ---
 
-<header class="fixed z-10 w-full top-0 ease-in duration-300">
-  <!-- class="flex justify-between items-center max-w-screen-2xl mx-auto px-6 py-3 md:px-11" -->
+<header class="fixed top-0 z-10 w-full bg-background">
   <div
-    class="grid grid-cols-[1fr_180px_1fr] justify-items-center items-center max-w-screen-2xl mx-auto px-6 py-3 md:px-11"
+    class="max-w-screen-2xl mx-auto px-fluid-m py-6 flex items-center justify-between border-b-2 border-tertiary-light"
   >
     <!-- mobile menu islands  -->
     <Hamburger client:idle />
@@ -24,33 +23,31 @@ import { navLinks } from "../data";
     </MobileMenu>
 
     <!-- larger devices menu -->
-    <nav class="hidden lg:flex justify-self-start gap-16">
+    <nav class="hidden lg:flex justify-self-start gap-11">
       {navLinks.map(item => <Link href={item.path} text={item.name} />)}
     </nav>
-    <!-- class="fixed bg-white top-0 left-1/2 w-32 p-4 rounded-b-full" -->
-    <a
-      href="/"
-      class="w-12 bg-white p-2 border-b-2 border-light-blue/50 rounded-b-full scale-[2] translate-y-4 lg:w-16"
-      aria-label="Go home"
-    >
-      <img src={logo.src} alt="logomark" />
-    </a>
     <Link
       href="/צור-קשר/"
       text="צרו קשר"
       classes="hidden justify-self-end text-white bg-black px-6 py-2 rounded md:block"
     />
   </div>
+
+  <!-- Logo -->
+  <div
+    class="w-fluid-3xl h-fluid-3xl flex justify-center absolute left-1/2 -translate-x-1/2"
+  >
+    <a
+      href="/"
+      class="p-fluid-xs bg-background flex border-2 border-tertiary-light rounded-full aspect-square absolute -top-1/2"
+    >
+      <img
+        src={logo.src}
+        alt="logomark"
+        width="100%"
+        height="100%"
+        class="object-cover"
+      /></a
+    >
+  </div>
 </header>
-
-<script>
-  const header = document.querySelector("header") as HTMLElement;
-
-  document.addEventListener("scroll", () => {
-    if (window.scrollY > 0) {
-      header.classList.add("scroll");
-    } else {
-      header.classList.remove("scroll");
-    }
-  });
-</script>
