--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -19,7 +19,9 @@ const { title, description } = Astro.props;
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
   <MainHead title={title} description={description} />
-  <body class="flex flex-col justify-between min-h-screen">
+  <body
+    class="bg-background text-text text-fluid-1 flex flex-col justify-between min-h-screen"
+  >
     <Header />
     <main class="animate-pageLoad">
       <slot />
