--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,4 +12,6 @@ import SubCTA from "../components/SubCTA.astro";
 <MainLayout
   title="מקוד | ניהול אנשים מכוון מטרה"
   description="טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ"
-/>
+>
+  <Hero />
+</MainLayout>
