--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,11 +1,40 @@
 ---
 // components imports
 import Link from "./Link.astro";
-
-// image imports
-import heroImg from "../assets/hero-collaboration-cropped.svg";
 ---
 
+<section
+  class="min-h-screen text-white bg-[url('../assets/hero-bg-blur.jpg')] bg-cover bg-center"
+>
+  <!-- Hero wrapper -->
+  <div
+    class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-fluid-xl"
+  >
+    <h1 class="text-fluid-5 font-semibold leading-none md:mt-28">
+      ניהול אנשים מכוון מטרה
+    </h1>
+    <div class="flex flex-col gap-5 text-fluid-2">
+      <h2>יחידת משאבי אנוש מקצועית במיקור חוץ לעסקים בינוניים וקטנים</h2>
+      <h2>ייעוץ וליווי ארגוני</h2>
+    </div>
+
+    <div class="flex gap-8">
+      <Link
+        text="לייעוץ חינם"
+        href="#צור-קשר"
+        type="btn"
+        btnStyle="btn-primary"
+      />
+      <Link text="לפרטים" href="#שירותים" type="btn" btnStyle="btn-secondary" />
+    </div>
+  </div>
+</section>
+
+<!-- 
+  class="min-h-screen text-white bg-slate-400 bg-[url('../assets/hands-stack_medium.jpg')] bg-cover bg-center bg-blend-multiply flex flex-col items-center justify-center"
+ -->
+
+<!-- 
 <section
   class="relative z-0 bg-bg-green pt-28 px-6 pb-16 sm:px-12 md:pt-44 md:px-24"
 >
@@ -33,10 +62,6 @@ import heroImg from "../assets/hero-collaboration-cropped.svg";
         classes={"inline-block text-black font-bold px-5 py-1 bg-aqua border-2 border-text-color rounded-full md:text-xl"}
       />
     </div>
-    <img
-      src={heroImg.src}
-      alt="People collaborating illustation"
-      class="hidden lg:block"
-    />
   </div>
 </section>
+ -->
