--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -13,7 +13,7 @@ const { title, description } = Astro.props;
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Rubik:wght@400;700;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700;800&family=Rubik:wght@400;600;700;900&display=swap"
     rel="stylesheet"
   />
 </head>
