add section layout instead of page layout, and add new content collection for the services cards

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,7 @@
 import Link from "../components/Link.astro";
 import SubCTA from "../components/SubCTA.astro";
 import MainLayout from "../layouts/MainLayout.astro";
-import PageLayout from "../layouts/PageLayout.astro";
+import PageLayout from "../layouts/SectionLayout.astro";
 ---
 
 <MainLayout title="עמוד לא קיים" description="עמוד לא קיים">
