--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 // components imports
 import Hero from "../components/Hero.astro";
-import Features from "../components/Features.astro";
-import ServicesIntro from "../components/ServicesIntro.astro";
-import SubCTA from "../components/SubCTA.astro";
+import SectionServices from "../components/SectionServices.astro";
 ---
 
 <MainLayout
@@ -14,4 +12,5 @@ import SubCTA from "../components/SubCTA.astro";
   description="טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ"
 >
   <Hero />
+  <SectionServices />
 </MainLayout>
