--- a/src/pages/אודות.astro
+++ b/src/pages/אודות.astro
@@ -1,7 +1,7 @@
 ---
 // layouts imports
 import MainLayout from "../layouts/MainLayout.astro";
-import PageLayout from "../layouts/PageLayout.astro";
+import PageLayout from "../layouts/SectionLayout.astro";
 
 // component imports
 import SubCTA from "../components/SubCTA.astro";
