--- a/src/pages/שירותים.astro
+++ b/src/pages/שירותים.astro
@@ -1,7 +1,7 @@
 ---
 // layout imports
 import MainLayout from "../layouts/MainLayout.astro";
-import PageLayout from "../layouts/PageLayout.astro";
+import PageLayout from "../layouts/SectionLayout.astro";
 
 // components imports
 import Service from "../components/Service.astro";
