--- a/src/pages/למה-אנחנו.astro
+++ b/src/pages/למה-אנחנו.astro
@@ -1,7 +1,7 @@
 ---
 import SubCTA from "../components/SubCTA.astro";
 import MainLayout from "../layouts/MainLayout.astro";
-import PageLayout from "../layouts/PageLayout.astro";
+import PageLayout from "../layouts/SectionLayout.astro";
 ---
 
 <MainLayout
