--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -17,7 +17,7 @@ const { title, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="he" dir="rtl" class="scroll-smooth">
   <MainHead title={title} description={description} />
   <body>
     <Header />
