--- a/src/layouts/SectionLayout.astro
+++ b/src/layouts/SectionLayout.astro
@@ -2,15 +2,18 @@
 interface Props {
   heading: string;
   subheading?: string;
+  id: string;
 }
-const { heading, subheading } = Astro.props;
+const { heading, subheading, id } = Astro.props;
 ---
 
-<section>
-  <div class="max-w-7xl mx-auto p-fluid-xl flex flex-col items-center">
-    <h2 class="text-primary text-fluid-3 font-bold">{heading}</h2>
-    <span aria-hidden="true" class="h-1 w-10 bg-tertiary rounded-full"></span>
-    <p class="text-fluid-0 mt-3">{subheading}</p>
+<section id={id}>
+  <div class="max-w-7xl mx-auto p-fluid-xl">
+    <div class="flex flex-col items-center">
+      <h2 class="text-primary text-fluid-3 font-bold">{heading}</h2>
+      <span aria-hidden="true" class="h-1 w-10 bg-tertiary rounded-full"></span>
+      <p class="text-fluid-0 mt-3 mb-fluid-l">{subheading}</p>
+    </div>
     <slot />
   </div>
 </section>
