finish the why-us section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 // components imports
 import Hero from "../components/Hero.astro";
 import SectionServices from "../components/SectionServices.astro";
+import SectionWhyUs from "../components/SectionWhyUs.astro";
 ---
 
 <MainLayout
@@ -13,4 +14,5 @@ import SectionServices from "../components/SectionServices.astro";
 >
   <Hero />
   <SectionServices />
+  <SectionWhyUs />
 </MainLayout>
