--- a/src/layouts/SectionLayout.astro
+++ b/src/layouts/SectionLayout.astro
@@ -3,14 +3,24 @@ interface Props {
   heading: string;
   subheading?: string;
   id: string;
+  bgColor?: "bg-primary" | "bg-accent-light";
+  textColor?: "text-primary" | "text-white";
 }
-const { heading, subheading, id } = Astro.props;
+const {
+  heading,
+  subheading,
+  id,
+  bgColor,
+  textColor = "text-primary"
+} = Astro.props;
 ---
 
-<section id={id}>
+<section id={id} class:list={[bgColor]}>
   <div class="max-w-7xl mx-auto p-fluid-xl">
     <div class="flex flex-col items-center">
-      <h2 class="text-primary text-fluid-3 font-bold">{heading}</h2>
+      <h2 class=`${textColor} text-primary text-fluid-3 font-bold`>
+        {heading}
+      </h2>
       <span aria-hidden="true" class="h-1 w-10 bg-tertiary rounded-full"></span>
       <p class="text-fluid-0 mt-3 mb-fluid-l">{subheading}</p>
     </div>
