finish the marketing and team sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Hero from "../components/Hero.astro";
 import SectionServices from "../components/SectionServices.astro";
 import SectionWhyUs from "../components/SectionWhyUs.astro";
+import SectionTeam from "../components/SectionTeam.astro";
+import Marketing from "../components/Marketing.astro";
 ---
 
 <MainLayout
@@ -15,4 +17,6 @@ import SectionWhyUs from "../components/SectionWhyUs.astro";
   <Hero />
   <SectionServices />
   <SectionWhyUs />
+  <Marketing />
+  <SectionTeam />
 </MainLayout>
