--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -24,6 +24,6 @@ const { title, description } = Astro.props;
     <main class="animate-pageLoad">
       <slot />
     </main>
-    <Footer />
+    <!-- <Footer /> -->
   </body>
 </html>
