--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ import { navLinks } from "../data";
           <Link href={item.path} text={item.name} type="link" />
         ))
       }
-      <Link href="/צור-קשר/" text="צרו קשר" type="link" />
+      <Link href="#צור-קשר" text="צרו קשר" type="link" />
     </MobileMenu>
 
     <!-- larger devices menu -->
