--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon";
 
 interface Props {
-  text: string;
+  text?: string;
   href: string;
   type: "link" | "btn";
   btnStyle?: "btn-primary" | "btn-secondary" | "btn-inverted";
