--- a/src/components/Marketing.astro
+++ b/src/components/Marketing.astro
@@ -13,7 +13,7 @@ import Link from "./Link.astro";
       href="#צור-קשר"
       type="btn"
       btnStyle="btn-secondary"
-      classes="w-max"
+      classes=""
     />
   </div>
 </section>
