--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import SectionServices from "../components/SectionServices.astro";
 import SectionWhyUs from "../components/SectionWhyUs.astro";
 import SectionTeam from "../components/SectionTeam.astro";
 import Marketing from "../components/Marketing.astro";
+import SectionContact from "../components/SectionContact.astro";
 ---
 
 <MainLayout
@@ -19,4 +20,5 @@ import Marketing from "../components/Marketing.astro";
   <SectionWhyUs />
   <Marketing />
   <SectionTeam />
+  <SectionContact />
 </MainLayout>
