--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,6 +24,7 @@ import Link from "./Link.astro";
         href="#צור-קשר"
         type="btn"
         btnStyle="btn-primary"
+        classes="hover:bg-white hover:text-accent hover:border-accent"
       />
       <Link text="לפרטים" href="#שירותים" type="btn" btnStyle="btn-secondary" />
     </div>
