change the why-us section and zoom-in ariel

--- a/src/components/SectionWhyUs.astro
+++ b/src/components/SectionWhyUs.astro
@@ -3,19 +3,19 @@ import SectionLayout from "../layouts/SectionLayout.astro";
 
 const textData = [
   {
-    q: "למה אנחנו?",
-    a: "כי אנו מאמינים שלניסיון אין מחיר ולמקצוענות אין תחליף. הלקוחות שלנו נהנים משני העולמות – לצוות שלנו ניסיון מצטבר של מעל 30 שנה, וידע אקדמי ומקצועי עשיר בעולמות משאבי האנוש, ניסיון וידע שעומדים לרשותכם ומחויבים להצלחה שלכם, אנו מתחייבים לשירות מקצועי ואדיב ולמענה מהיר ומדויק לצרכי משאבי האנוש שלכם."
-  },
-  {
     q: "מה אתם מרוויחים?",
     a: "אתם יכולים להתמקד בפעילות העיקרית של הארגון, עם ביטחון מלא שהעובדים שלכם מטופלים במקצועיות ואנושיות על-ידי צוות מחויב ומסור, ושאתם עומדים בכל דרישות החוק ."
+  },
+  {
+    q: "למה אנחנו?",
+    a: "כי אנו מאמינים שלניסיון אין מחיר ולמקצוענות אין תחליף. הלקוחות שלנו נהנים משני העולמות – לצוות שלנו ניסיון מצטבר של מעל 30 שנה, וידע אקדמי ומקצועי עשיר בעולמות משאבי האנוש, ניסיון וידע שעומדים לרשותכם ומחויבים להצלחה שלכם, אנו מתחייבים לשירות מקצועי ואדיב ולמענה מהיר ומדויק לצרכי משאבי האנוש שלכם."
   }
 ];
 ---
 
 <SectionLayout
-  heading="למה אנחנו?"
-  id="למה-אנחנו"
+  heading="למה כדאי?"
+  id="למה-כדאי"
   bgColor="bg-primary"
   textColor="text-white"
 >
