change intro text and remove one service category

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,9 @@ import Link from "./Link.astro";
       ניהול אנשים מכוון מטרה
     </h1>
     <div class="flex flex-col gap-5 text-fluid-2">
-      <h2>יחידת משאבי אנוש מקצועית במיקור חוץ לעסקים בינוניים וקטנים</h2>
+      <h2>
+        פתרונות מקצועיים במיקור חוץ לניהול משאבי אנוש לעסקים בינוניים וקטנים
+      </h2>
       <h2>ייעוץ וליווי ארגוני</h2>
     </div>
 
