--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,12 +20,13 @@ import Link from "./Link.astro";
       <h2>ייעוץ וליווי ארגוני</h2>
     </div>
 
-    <div class="flex gap-8">
+    <div class="flex flex-wrap justify-center gap-8">
       <Link
         text="לייעוץ חינם"
-        href="#צור-קשר"
+        href="tel:04-6442777"
         type="btn"
         btnStyle="btn-primary"
+        icon="lucide:phone-call"
         classes="hover:bg-white hover:text-accent hover:border-accent"
       />
       <Link text="לפרטים" href="#שירותים" type="btn" btnStyle="btn-secondary" />
