remove the mobile call button and add a btn-style for icons

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,12 +26,6 @@ import { navLinks } from "../data";
       }
       <Link href="#צור-קשר" text="צרו קשר" type="link" />
     </MobileMenu>
-    <Link
-      href="tel:04-6442777"
-      type="btn"
-      icon="lucide:phone-call"
-      classes="text-white bg-black w-10 p-2 aspect-square rounded-full md:hidden"
-    />
 
     <!-- larger devices menu -->
     <nav class="hidden lg:flex justify-self-start gap-11">
@@ -51,7 +45,7 @@ import { navLinks } from "../data";
 
   <!-- Logo -->
   <div
-    class="w-fluid-3xl h-fluid-3xl flex justify-center absolute left-1/2 -translate-x-1/2"
+    class="w-fluid-3xl h-fluid-3xl flex justify-center absolute left-1/2 -translate-x-1/2 aspect-square"
   >
     <a
       href="/"
