--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -5,7 +5,7 @@ interface Props {
   text?: string;
   href: string;
   type: "link" | "btn";
-  btnStyle?: "btn-primary" | "btn-secondary" | "btn-inverted";
+  btnStyle?: "btn-primary" | "btn-secondary" | "btn-inverted" | "btn-icon";
   icon?: string;
   classes?: string;
 }
