narrow the section padding for mobile and increase the mobile contact button size

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -45,7 +45,7 @@ import { navLinks } from "../data";
 
   <!-- Logo -->
   <div
-    class="w-fluid-3xl h-fluid-3xl flex justify-center absolute left-1/2 -translate-x-1/2 aspect-square"
+    class="w-24 h-24 md:w-fluid-3xl md:h-fluid-3xl flex justify-center absolute left-1/2 -translate-x-1/2"
   >
     <a
       href="/"
