--- a/src/components/SectionContact.astro
+++ b/src/components/SectionContact.astro
@@ -44,30 +44,26 @@ import Link from "./Link.astro";
       <Link
         href="tel:054-2240063"
         type="btn"
-        btnStyle="btn-inverted"
+        btnStyle="btn-icon"
         icon="tabler:device-mobile"
-        classes="md:hidden w-10 p-2 rounded-full"
       />
       <Link
         href="https://wa.me/972542240063"
         type="btn"
-        btnStyle="btn-inverted"
+        btnStyle="btn-icon"
         icon="tabler:brand-whatsapp"
-        classes="md:hidden w-10 p-2 rounded-full"
       />
       <Link
         href="tel:04-6442777"
         type="btn"
-        btnStyle="btn-inverted"
+        btnStyle="btn-icon"
         icon="tabler:phone"
-        classes="md:hidden w-10 p-2 rounded-full"
       />
       <Link
         href="mailto:mikud-na@mikud.net"
         type="btn"
-        btnStyle="btn-inverted"
+        btnStyle="btn-icon"
         icon="tabler:mail"
-        classes="md:hidden w-10 p-2 rounded-full"
       />
     </div>
     <ContactForm />
