--- a/src/layouts/SectionLayout.astro
+++ b/src/layouts/SectionLayout.astro
@@ -16,7 +16,7 @@ const {
 ---
 
 <section id={id} class:list={[bgColor]}>
-  <div class="max-w-7xl mx-auto p-fluid-xl">
+  <div class="max-w-7xl mx-auto px-fluid-m py-fluid-2xl">
     <div class="flex flex-col items-center">
       <h2 class=`${textColor} text-primary text-fluid-3 font-bold`>
         {heading}
