add service cards transition

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -51,7 +51,7 @@ import { navLinks } from "../data";
       href="/"
       class="p-fluid-xs bg-background flex border-2 border-tertiary-light rounded-full aspect-square absolute -top-1/2"
     >
-      <Image src={logo} alt="logomark" class="object-cover" /></a
+      <Image src={logo} alt="logomark" class="object-cover aspect-square" /></a
     >
   </div>
 </header>
