add parallax effect to the hero background image

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,7 @@ import Link from "./Link.astro";
 >
   <!-- Hero wrapper -->
   <div
-    class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-fluid-xl"
+    class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-fluid-xl bg-fixed"
   >
     <h1 class="text-fluid-5 font-semibold leading-none md:mt-28">
       ניהול אנשים מכוון מטרה
