--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@ import Link from "./Link.astro";
 ---
 
 <section
-  class="min-h-screen text-white bg-[url('../assets/hero-bg-blur.jpg')] bg-cover bg-center"
+  class="min-h-screen text-white bg-[url('../assets/hero-bg-blur.jpg')] bg-cover bg-center bg-fixed"
 >
   <!-- Hero wrapper -->
   <div
