--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,11 +4,11 @@ import Link from "./Link.astro";
 ---
 
 <section
-  class="min-h-screen text-white md:bg-[url('../assets/hero-bg-blur.jpg')] bg-cover bg-center"
+  class="min-h-screen text-white bg-[url('../assets/hero-bg-blur.jpg')] bg-cover bg-center"
 >
   <!-- Hero wrapper -->
   <div
-    class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-fluid-xl bg-fixed"
+    class="min-h-screen bg-[url('../assets/hero-bg-filter.jpg')] bg-cover bg-center px-fluid-s py-fluid-xl text-center flex flex-col items-center justify-center gap-fluid-xl md:bg-fixed"
   >
     <h1 class="text-fluid-5 font-semibold leading-none md:mt-28">
       ניהול אנשים מכוון מטרה
